--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .menu {
@@ -12,4 +14,23 @@
 
   background-color: #000000;
   color: #ffffff;
+}
+
+.panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  border: 1px solid #ff0000;
+}
+
+.square {
+  height: 150px;
+  width: 150px;
+  border: 1px solid #000000;
+  background-color: #7fffd4;
+}
+
+.enemy {
+  background-color: #ff0000;
 }
