--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+
+  background-image: url("/src/images/wall.png");
 }
 
 .menu {
@@ -14,6 +16,13 @@
 
   background-color: #000000;
   color: #ffffff;
+  border-bottom: 5px solid #ffd700;
+}
+
+.menu-lives {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .panel {
@@ -21,16 +30,16 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
-  border: 1px solid #ff0000;
 }
 
 .square {
   height: 150px;
   width: 150px;
   border: 1px solid #000000;
-  background-color: #7fffd4;
+  background-color: #1aeaa5;
 }
 
 .enemy {
-  background-color: #ff0000;
+  background-image: url("/src/images/ralph.png");
+  background-size: cover;
 }
