--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,11 @@
   border-bottom: 5px solid #ffd700;
 }
 
+.menu-time h2:nth-child(2),
+.menu-score h2:nth-child(2) {
+  margin-top: 1rem;
+}
+
 .menu-lives {
   display: flex;
   justify-content: center;
