CSS: Bug Fixed!

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100vh;
 
-  background-image: url("./src/images/wall.png");
+  background-image: url("../images/wall.png");
 }
 
 .menu {
@@ -45,6 +45,6 @@
 }
 
 .enemy {
-  background-image: url("./src/images/ralph.png");
+  background-image: url("../images/ralph.png");
   background-size: cover;
 }
